Remove RemoteSystem, fix behavior when two players swap the same tiles, add removal of disconnected peers